src/styles.scss
/* You can add global styles to this file, and also import other style files */
// Check tailwind.config.js (tailwind) and and m3-theme.scss (angular material) files for more customization
@import 'material-symbols/outlined';

@tailwind base;
@tailwind components;
@tailwind utilities;

html, body {
  height: 100%;
}

body {
  margin: 0;
  font-family: Roboto, "Helvetica Neue", sans-serif;
}

body {
  background: theme('colors.black-primary');
}

button[mat-fab], button[extended] {
  height: 3rem;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.5rem;
  letter-spacing: 0.5px;

  .mdc-button__label {
    display: flex;
    gap: 8px;
    align-items: center;
  }

}

